<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            tools:src="@mipmap/ic_launcher"
            android:transitionName="@string/anim_image"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/title"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:layout_toEndOf="@+id/image"
            android:transitionName="@string/anim_title"
            tools:text="@string/title"/>


        <TextView
            android:id="@+id/descriptioin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            android:layout_toEndOf="@+id/image"
            android:layout_below="@+id/title"
            android:ellipsize="end"
            android:maxLines="2"
            android:transitionName="@string/anim_description"
            tools:text="@string/description"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>