<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/cloudburst"
    android:padding="5dp">

    <co.aswin.elanic.view.TextViewIcon
        android:id="@+id/iconBack"
        android:text="@string/icon_back"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/iconBack"
        android:layout_toStartOf="@+id/iconSearch"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/editIext"
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:hint="@string/search_hint"
        android:visibility="invisible"
        android:layout_toEndOf="@+id/iconBack"
        android:layout_toStartOf="@+id/iconSearch"/>

    <co.aswin.elanic.view.TextViewIcon
        android:id="@+id/iconSearch"
        android:text="@string/icon_search"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>

    <co.aswin.elanic.view.TextViewIcon
        android:id="@+id/iconClear"
        android:text="@string/icon_clear"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>